removed keys, added favicons, updated personal website project descriptions.

--- a/homeFiles/projects.html
+++ b/homeFiles/projects.html
@@ -25,22 +25,56 @@
 
      <body>
        <div class="projects">
+           <div>
+             <a href="./files/laurensteimle/index.html"><img class="tilePic" src="img/lsd.png"></a>
+             <ul class="project_details">
+               <p class="project_title">Lauren Steimle Design</p>
+               <li>Made website for a friend - implemented various JavaScript functions, connected a form to Firebase, made mobile-friendly, and learned new CSS functionalities.</li>
+               <li><b>Skills:</b> HTML, CSS, JavaScript, Firebase, Media Queries</li>
+               <li><b>Github Repository: </b><a href="https://github.com/jcwheatley/website/tree/master/homeFiles/files/laurensteimle">Click Here</a></li>
+             </ul>
+           </div>
+           <div>
+             <a href="./files/responsive/index.html"><img class="tilePic" src="img/gigdream.png"></a>
+             <ul class="project_details">
+               <p class="project_title">GigDream Concept</p>
+               <li>A responsive concept for a Gigabit Internet Service Provider Business</li>
+               <li><b>Skills:</b> HTML, CSS, Media Queries</li>
+               <li><b>Github Repository:</b> <a href="https://github.com/jcwheatley/Responsive-Web-Design"> Click Here</a></li>
+             </ul>
+           </div>
+           <div>
+             <a href="img/bigdata2.pdf"><img class="tilePic" src="img/bigdata.png"></a>
+             <ul class="project_details">
+               <p class="project_title">Big Data Science Project</p>
+               <li>A group project for a large survey company (Qualtrics). We placed third out of 20 teams. Above is the poster I designed to represent our work.</li>
+               <li><b>Skills:</b> Teamwork, Python, Basic Statistical Modeling, Technical Writing and Design</li>
+             </ul>
+           </div>
+           <div>
+             <a href="http://www.jcwheatley.com/labs/lab-3-angular-directives-jcwheatley"><img class="tilePic" src="img/angular.png"></a>
+             <ul class="project_details">
+               <p class="project_title">Creating and Displaying Users</p>
+               <li>Simply add a name, email, and photo to a list.</li>
+               <li><b>Skills:</b> Angular Directives</li>
+               <li><b>Github Repository:</b> <a href="https://github.com/jcwheatley/Angular-Directives"> Click Here</a></li>
+             </ul>
+           </div>
             <div>
               <a href="http://www.jcwheatley.com/labs/lab-2-rest-services-jcwheatley/"><img class="tilePic" src="img/REST.png"></a>
                 <ul class="project_details">
                   <p class="project_title">Weather/StackExchange Query</p>
                   <li>Running queries on Utah weather and Stack Exchange threads.</li>
-                  <li><b>Skills:</b> RESTful Services</li>
+                  <li><b>Skills:</b> REST API, AJAX, jQuery</li>
                   <li><b>Github Repository:</b> <a href="https://github.com/jcwheatley/weather-and-stack-exchange-query"> Click Here</a></li>
                 </ul>
             </div>
             <div>
-              <a href="http://www.jcwheatley.com/labs/lab-3-angular-directives-jcwheatley"><img class="tilePic" src="img/angular.png"></a>
+              <a href="http://www.threadedleather.com"><img class="tilePic" src="img/threaded.png"></a>
               <ul class="project_details">
-                <p class="project_title">Creating and Displaying Users</p>
-                <li>Simply add a name, email, and photo to a list.</li>
-                <li><b>Skills:</b> Angular Directives</li>
-                <li><b>Github Repository:</b> <a href="https://github.com/jcwheatley/Angular-Directives"> Click Here</a></li>
+                <p class="project_title">Threaded Leather Co.</p>
+                <li>I combined a few of my passions and founded a leather watch strap company. Currently managing all business operations.</li>
+                <li><b>Skills:</b> Website UX, Business Development, SEO, Advertising</li>
               </ul>
             </div>
             <div>
@@ -52,40 +86,7 @@
                 <li><b>Github Repository:</b> <a href="https://github.com/jcwheatley/Weight-Log"> Click Here</a></li>
               </ul>
             </div>
-            <div>
-              <a href="./files/responsive/index.html"><img class="tilePic" src="img/gigdream.png"></a>
-              <ul class="project_details">
-                <p class="project_title">GigDream Concept</p>
-                <li>A responsive concept for a Gigabit Internet Service Provider Business</li>
-                <li><b>Skills:</b> HTML, CSS, Media Queries</li>
-                <li><b>Github Repository:</b> <a href="https://github.com/jcwheatley/Responsive-Web-Design"> Click Here</a></li>
-              </ul>
-            </div>
-            <div>
-              <a href="http://www.threadedleather.com"><img class="tilePic" src="img/threaded.png"></a>
-              <ul class="project_details">
-                <p class="project_title">Threaded Leather Co.</p>
-                <li>I started a company producing and selling fine watch straps online. I take care of the branding, sourcing, customer service, and oversee production.</li>
-                <li></li>
-              </ul>
-            </div>
-            <div>
-              <a href="img/bigdata2.pdf"><img class="tilePic" src="img/bigdata.png"></a>
-              <ul class="project_details">
-                <p class="project_title">Big Data Science Project</p>
-                <li>A group project for a large survey company (Qualtrics). We placed third out of 20 teams. Above is the poster I designed to represent our work.</li>
-                <li></li>
-              </ul>
-            </div>
-            <div>
-              <a href="./files/laurensteimle/index.html"><img class="tilePic" src="img/lsd.png"></a>
-              <ul class="project_details">
-                <p class="project_title">Lauren Steimle Design</p>
-                <li>*In progress* Freelance work for a friend, learned how to implement full sized background video and JavaScript photo library.</li>
-                <li><b>Skills:</b> HTML, CSS, JavaScript</li>
-                <li><b>Github Repository: </b><a href="https://github.com/jcwheatley/website/tree/master/homeFiles/files/laurensteimle">Click Here</a></li>
-              </ul>
-            </div>
+
 
 
 
