--- a/homeFiles/files/laurensteimle/photo.html
+++ b/homeFiles/files/laurensteimle/photo.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="css/lightbox.min.css">
+    <link rel="icon"
+          type="image/png"
+          href="files/lauren steimle & designs logos/Logo Mark/LS&D Logomark-Auburn.png" />
     <script src="js/lightbox-plus-jquery.min.js"></script>
 
     <title>Lauren Steimle | photo</title>
