added mern project

--- a/homeFiles/projects.html
+++ b/homeFiles/projects.html
@@ -26,6 +26,15 @@
      <body>
        <div class="projects">
            <div>
+             <a href="https://blooming-meadow-56750.herokuapp.com"><img class="tilePic" src="img/mern-shoppinglist.png"></a>
+             <ul class="project_details">
+               <p class="project_title">MERN Stack Shopping List</p>
+               <li>Getting familiar with the "MERN" stack. Built a simple shopping list that handles post and delete requests.</li>
+               <li><b>Skills:</b> MongoDB, Express, React, Node.js, Redux, Reactstrap, Heroku</li>
+               <li><b>Github Repository: </b><a href="https://github.com/jcwheatley/React-Shopping-List">Click Here</a></li>
+             </ul>
+           </div>
+           <div>
              <a href="./files/laurensteimle/index.html"><img class="tilePic" src="img/lsd.png"></a>
              <ul class="project_details">
                <p class="project_title">Lauren Steimle Design</p>
