fixed resume page, added photos to gallery, added function to project sliders

--- a/homeFiles/files/laurensteimle/about.html
+++ b/homeFiles/files/laurensteimle/about.html
@@ -51,6 +51,46 @@
             <div class="right-about">
                 <img src="media/ls_portrait.png">
             </div>
+        
+            <div class="resume">
+                <br>
+                <h3 class="resume-sections">Education</h3>
+                <p class="normal">art – graphic design emphasis (magna cum laude)</p>
+                <p class="sub1">brigham young university – hawaii / June 2016</p>
+                <p class="sub2">3.84 GPA</p>
+
+                <p class="normal">art history & photography study abroad</p>
+                <p class="sub1">brigham young university – study abroad / May-June 2015</p>
+                <p class="sub2">Sharpened photography skills, gained inspiration for creativity and noted ideas for future designs.</p>
+                <br>
+                <h3 class="resume-sections">Experience</h3>
+
+                <p class="normal">senior graphic designer / stream realty partners</p>
+                <p class="sub1">September 2016 to present</p>
+                <p class="sub2">senior graphic designer for all marketing, advertising and design work from the stream realty washington, d.c. office plus assistance in national branding and campaigns.</p>
+                
+                <p class="normal">photo & design intern / kate zaremba company</p>
+                <p class="sub1">July 2016 to August 2016</p>
+                <p class="sub2">intern to kate zaremba, textile designer and owner of company, in all design and business related tasks. updated and kept website and blog up to date, assisted with orders, photographed projects and helped with classes and workshops.</p>
+
+                <p class="normal">photo & design intern / verily magazine</p>
+                <p class="sub1">February 2016 to May 2016</p>
+                <p class="sub2">Intern taking 80 photos for Verily’s 3 social media accounts including facebook, twitter and instagram and designing moodboards and other online content.</p>
+
+                <p class="normal">writer & layout artist / ke’alakai</p>
+                <p class="sub1">September 2013 to April 2015 and February 2016 to June 2016</p>
+                <p class="sub2">Started out writing multiple articles for BYU-Hawaii’s weekly publication Ke’Alakai (The Leader) and transitioned into layout artist eight months after beginning.</p>
+
+                <p class="normal">freelance design / lauren steimle designs</p>
+                <p class="sub1">April 2014 to present</p>
+                <p class="sub2">Work with a variety of clients, assisting in various needs from branding and advertising to invitations.</p>
+
+                <p class="normal">video finalist / darling magazine’s video contest</p>
+                <p class="sub1">November 2015</p>
+                <p class="sub2">Crafted a travel video highlighting the Pacific Northwest and was a finalist in Darling Magazine’s instagram #DarlingExplorer contest.</p>
+
+
+            </div>
         </div>
         <div class="left-panel" id="grey-theme">
             <div id="branding">
