--- a/homeFiles/files/laurensteimle/photo.html
+++ b/homeFiles/files/laurensteimle/photo.html
@@ -32,18 +32,38 @@
             </div>
 
             <div class="gallery">
-                <a href="media/photoGallery/photo1.png" data-lightbox="mygallery" data-title="ROMA, ITALIA"><img src="media/pgCropped/photo1.png"></a>
-                <a href="media/photoGallery/photo2.png" data-lightbox="mygallery" data-title=""><img src="media/pgCropped/photo2.png"></a>
-                <a href="media/photoGallery/photo3.png" data-lightbox="mygallery" data-title=""><img src="media/pgCropped/photo3"></a>
-                <a href="media/photoGallery/photo4.png" data-lightbox="mygallery" data-title=""><img src="media/pgCropped/photo4"></a>
-                <a href="media/photoGallery/photo5.png" data-lightbox="mygallery" data-title=""><img src="media/pgCropped/photo5.png"></a>
-                <a href="media/photoGallery/photo6.png" data-lightbox="mygallery" data-title=""><img src="media/pgCropped/photo6"></a>
-                <a href="media/photoGallery/photo7.png" data-lightbox="mygallery" data-title=""><img src="media/pgCropped/photo7"></a>
-                <a href="media/photoGallery/photo8.png" data-lightbox="mygallery" data-title=""><img src="media/pgCropped/photo8.png"></a>
-                <a href="media/photoGallery/photo9.png" data-lightbox="mygallery" data-title=""><img src="media/pgCropped/photo9.png"></a>
-                <a href="media/photoGallery/photo10.png" data-lightbox="mygallery" data-title=""><img src="media/pgCropped/photo10"></a>
-                <a href="media/photoGallery/photo11.png" data-lightbox="mygallery" data-title=""><img src="media/pgCropped/photo11.png"></a>
-                <a href="media/photoGallery/photo12.png" data-lightbox="mygallery" data-title=""><img src="media/pgCropped/photo12"></a>
+                <a href="media/photoGallery/photo(1).jpg" data-lightbox="mygallery" data-title=""><img class="thumbnail" src="media/photoGallery/photo(1).jpg"></a>
+                <a href="media/photoGallery/photo(2).jpg" data-lightbox="mygallery" data-title=""><img class="thumbnail" src="media/photoGallery/photo(2).jpg"></a>
+                <a href="media/photoGallery/photo(3).jpg" data-lightbox="mygallery" data-title=""><img class="thumbnail" src="media/photoGallery/photo(3).jpg"></a>
+                <a href="media/photoGallery/photo(4).jpg" data-lightbox="mygallery" data-title=""><img class="thumbnail" src="media/photoGallery/photo(4).jpg"></a>
+                <a href="media/photoGallery/photo(5).jpg" data-lightbox="mygallery" data-title=""><img class="thumbnail" src="media/photoGallery/photo(5).jpg"></a>
+                <a href="media/photoGallery/photo(6).jpg" data-lightbox="mygallery" data-title=""><img class="thumbnail" src="media/photoGallery/photo(6).jpg"></a>
+                <a href="media/photoGallery/photo(7).jpg" data-lightbox="mygallery" data-title=""><img class="thumbnail" src="media/photoGallery/photo(7).jpg"></a>
+                <a href="media/photoGallery/photo(8).jpg" data-lightbox="mygallery" data-title=""><img class="thumbnail" src="media/photoGallery/photo(8).jpg"></a>
+                <a href="media/photoGallery/photo(9).jpg" data-lightbox="mygallery" data-title=""><img class="thumbnail" src="media/photoGallery/photo(9).jpg"></a>
+                <a href="media/photoGallery/photo(10).JPG" data-lightbox="mygallery" data-title=""><img class="thumbnail" src="media/photoGallery/photo(10).JPG"></a>
+                <a href="media/photoGallery/photo(11).JPG" data-lightbox="mygallery" data-title=""><img class="thumbnail" src="media/photoGallery/photo(11).JPG"></a>
+                <a href="media/photoGallery/photo(12).JPG" data-lightbox="mygallery" data-title=""><img class="thumbnail" src="media/photoGallery/photo(12).JPG"></a>
+                <a href="media/photoGallery/photo(13).JPG" data-lightbox="mygallery" data-title=""><img class="thumbnail" src="media/photoGallery/photo(13).JPG"></a>
+                <a href="media/photoGallery/photo(14).JPG" data-lightbox="mygallery" data-title=""><img class="thumbnail" src="media/photoGallery/photo(14).JPG"></a>
+                <a href="media/photoGallery/photo(15).JPG" data-lightbox="mygallery" data-title=""><img class="thumbnail" src="media/photoGallery/photo(15).JPG"></a>
+                <a href="media/photoGallery/photo(16).JPG" data-lightbox="mygallery" data-title=""><img class="thumbnail" src="media/photoGallery/photo(16).JPG"></a>
+                <a href="media/photoGallery/photo(17).JPG" data-lightbox="mygallery" data-title=""><img class="thumbnail" src="media/photoGallery/photo(17).JPG"></a>
+                <a href="media/photoGallery/photo(18).JPG" data-lightbox="mygallery" data-title=""><img class="thumbnail" src="media/photoGallery/photo(18).JPG"></a>
+                <a href="media/photoGallery/photo(19).JPG" data-lightbox="mygallery" data-title=""><img class="thumbnail" src="media/photoGallery/photo(19).JPG"></a>
+                <a href="media/photoGallery/photo(20).jpg" data-lightbox="mygallery" data-title=""><img class="thumbnail" src="media/photoGallery/photo(20).jpg"></a>
+                <a href="media/photoGallery/photo(21).JPG" data-lightbox="mygallery" data-title=""><img class="thumbnail" src="media/photoGallery/photo(21).JPG"></a>
+                <a href="media/photoGallery/photo(22).JPG" data-lightbox="mygallery" data-title=""><img class="thumbnail" src="media/photoGallery/photo(22).JPG"></a>
+                <a href="media/photoGallery/photo(23).JPG" data-lightbox="mygallery" data-title=""><img class="thumbnail" src="media/photoGallery/photo(23).JPG"></a>
+                <a href="media/photoGallery/photo(24).JPG" data-lightbox="mygallery" data-title=""><img class="thumbnail" src="media/photoGallery/photo(24).JPG"></a>
+                <a href="media/photoGallery/photo(25).jpg" data-lightbox="mygallery" data-title=""><img class="thumbnail" src="media/photoGallery/photo(25).jpg"></a>
+                <a href="media/photoGallery/photo(26).jpg" data-lightbox="mygallery" data-title=""><img class="thumbnail" src="media/photoGallery/photo(26).jpg"></a>
+                <a href="media/photoGallery/photo(27).JPG" data-lightbox="mygallery" data-title=""><img class="thumbnail" src="media/photoGallery/photo(27).JPG"></a>
+                <a href="media/photoGallery/photo(28).JPG" data-lightbox="mygallery" data-title=""><img class="thumbnail" src="media/photoGallery/photo(28).JPG"></a>
+                <a href="media/photoGallery/photo(29).JPG" data-lightbox="mygallery" data-title=""><img class="thumbnail" src="media/photoGallery/photo(29).JPG"></a>
+                <a href="media/photoGallery/photo(30).JPG" data-lightbox="mygallery" data-title=""><img class="thumbnail" src="media/photoGallery/photo(30).JPG"></a>
+                <a href="media/photoGallery/photo(31).JPG" data-lightbox="mygallery" data-title=""><img class="thumbnail" src="media/photoGallery/photo(31).JPG"></a>
+
             </div>
         </div>
         <div class="left-panel">
