lots of tweaking to Lauren's desire. Added SSL cert.

--- a/homeFiles/files/laurensteimle/contact.html
+++ b/homeFiles/files/laurensteimle/contact.html
@@ -26,6 +26,8 @@
                     <!-- <a href="updates.html">updates</a> -->
                     <a id="current-mobile" href="contact.html">contact</a>
                 </div>
+                <br>
+                <p class="copyright-mobile">&copy; Lauren Steimle Designs</p>
             </div>
 
             <div class="alert">Message sent. Thank you for getting in touch!</div>
@@ -71,6 +73,7 @@
                     <li class="special"><a href="mailto:hello@laurensteimle.com">hello@laurensteimle.com</a></li>
                     <li class="special">washington, dc</li>
                 </ul>
+                <p class="copyright">&copy; Lauren Steimle Designs</p>
             </div>
         </div>
 
