--- a/homeFiles/files/laurensteimle/about.html
+++ b/homeFiles/files/laurensteimle/about.html
@@ -26,6 +26,8 @@
                     <!-- <a href="updates.html">updates</a> -->
                     <a href="contact.html">contact</a>
                 </div>
+                <br>
+                <p class="copyright-mobile">&copy; Lauren Steimle Designs</p>
             </div>
 
             <div class="left-about">
@@ -113,6 +115,7 @@
                     <li class="special"><a href="mailto:hello@laurensteimle.com">hello@laurensteimle.com</a></li>
                     <li class="special">washington, dc</li>
                 </ul>
+                <p class="copyright">&copy; Lauren Steimle Designs</p>
             </div>
         </div>
 
