--- a/homeFiles/files/laurensteimle/photo.html
+++ b/homeFiles/files/laurensteimle/photo.html
@@ -29,6 +29,8 @@
                     <!-- <a href="updates.html">updates</a> -->
                     <a href="contact.html">contact</a>
                 </div>
+                <br>
+                <p class="copyright-mobile">&copy; Lauren Steimle Designs</p>
             </div>
 
             <div class="gallery">
@@ -87,6 +89,7 @@
                     <li class="special"><a href="mailto:hello@laurensteimle.com">hello@laurensteimle.com</a></li>
                     <li class="special">washington, dc</li>
                 </ul>
+                <p class="copyright">&copy; Lauren Steimle Designs</p>
             </div>
         </div>
 
